--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "private": true,
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "webpack"
+    "build": "webpack",
+    "server": "node server.js"
   },
   "keywords": [],
   "author": "",
@@ -14,11 +15,16 @@
     "clean-webpack-plugin": "^3.0.0",
     "css-loader": "^4.2.0",
     "csv-loader": "^3.0.3",
+    "e": "0.0.4",
+    "express": "^4.17.1",
     "file-loader": "^6.0.0",
     "html-webpack-plugin": "^4.3.0",
+    "open": "^7.1.0",
     "style-loader": "^1.2.1",
     "webpack": "^4.44.1",
     "webpack-cli": "^3.3.12",
+    "webpack-dev-middleware": "^3.7.2",
+    "webpack-hot-middleware": "^2.25.0",
     "xml-loader": "^1.2.1"
   },
   "dependencies": {
